# serializer version: 1
# name: TestPerson.test_search_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 2
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 2
         AND (("pmat_email" ILIKE '%another@gm%')
              OR id IN
                (SELECT person_id
                 FROM
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 2
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0)
                 WHERE distinct_id = 'another@gm' )) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(created_at, version) < now() + INTERVAL 1 DAY
  AND ((argMax(person."pmat_email", version) ILIKE '%another@gm%')
       OR id IN
         (SELECT person_id
          FROM
            (SELECT distinct_id,
                    argMax(person_id, version) as person_id
             FROM person_distinct_id2
             WHERE team_id = 2
             GROUP BY distinct_id
             HAVING argMax(is_deleted, version) = 0)
          WHERE distinct_id = 'another@gm' ))
  ORDER BY argMax(created_at, version) DESC, id
  LIMIT 100
  '''
# ---
# name: TestPerson.test_search_materialized.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 2
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 2
         AND (("pmat_email" ILIKE '%distinct_id_3%')
              OR id IN
                (SELECT person_id
                 FROM
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 2
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0)
                 WHERE distinct_id = 'distinct_id_3' )) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(created_at, version) < now() + INTERVAL 1 DAY
  AND ((argMax(person."pmat_email", version) ILIKE '%distinct_id_3%')
       OR id IN
         (SELECT person_id
          FROM
            (SELECT distinct_id,
                    argMax(person_id, version) as person_id
             FROM person_distinct_id2
             WHERE team_id = 2
             GROUP BY distinct_id
             HAVING argMax(is_deleted, version) = 0)
          WHERE distinct_id = 'distinct_id_3' ))
  ORDER BY argMax(created_at, version) DESC, id
  LIMIT 100
  '''
# ---
# name: TestPerson.test_search_person_id
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 2
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 2
         AND ((replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '') ILIKE '%00000000-0000-4000-8000-000000000000%')
              OR (id = '00000000-0000-4000-8000-000000000000'
                  OR id IN
                    (SELECT person_id
                     FROM
                       (SELECT distinct_id,
                               argMax(person_id, version) as person_id
                        FROM person_distinct_id2
                        WHERE team_id = 2
                        GROUP BY distinct_id
                        HAVING argMax(is_deleted, version) = 0)
                     WHERE distinct_id = '00000000-0000-4000-8000-000000000000' ))) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(created_at, version) < now() + INTERVAL 1 DAY
  AND ((replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'email'), '^"|"$', '') ILIKE '%00000000-0000-4000-8000-000000000000%')
       OR (id = '00000000-0000-4000-8000-000000000000'
           OR id IN
             (SELECT person_id
              FROM
                (SELECT distinct_id,
                        argMax(person_id, version) as person_id
                 FROM person_distinct_id2
                 WHERE team_id = 2
                 GROUP BY distinct_id
                 HAVING argMax(is_deleted, version) = 0)
              WHERE distinct_id = '00000000-0000-4000-8000-000000000000' )))
  ORDER BY argMax(created_at, version) DESC, id
  LIMIT 100
  '''
# ---
# name: TestPerson.test_search_person_id_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 2
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 2
         AND (("pmat_email" ILIKE '%00000000-0000-4000-8000-000000000000%')
              OR (id = '00000000-0000-4000-8000-000000000000'
                  OR id IN
                    (SELECT person_id
                     FROM
                       (SELECT distinct_id,
                               argMax(person_id, version) as person_id
                        FROM person_distinct_id2
                        WHERE team_id = 2
                        GROUP BY distinct_id
                        HAVING argMax(is_deleted, version) = 0)
                     WHERE distinct_id = '00000000-0000-4000-8000-000000000000' ))) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(created_at, version) < now() + INTERVAL 1 DAY
  AND ((argMax(person."pmat_email", version) ILIKE '%00000000-0000-4000-8000-000000000000%')
       OR (id = '00000000-0000-4000-8000-000000000000'
           OR id IN
             (SELECT person_id
              FROM
                (SELECT distinct_id,
                        argMax(person_id, version) as person_id
                 FROM person_distinct_id2
                 WHERE team_id = 2
                 GROUP BY distinct_id
                 HAVING argMax(is_deleted, version) = 0)
              WHERE distinct_id = '00000000-0000-4000-8000-000000000000' )))
  ORDER BY argMax(created_at, version) DESC, id
  LIMIT 100
  '''
# ---
